--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Landmarks-in-Russian-literature_68597
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68597-h/images/cover.jpg
 creator:
   author:
     agent_name: Baring, Maurice
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/937
     wikipedia: https://en.wikipedia.org/wiki/Maurice_Baring
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68597#Landmarks-in-Russian-literature
 gutenberg_issued: '2022-07-24'
 identifiers:
   gutenberg: '68597'
